# xonsh-tree-sitter

./: Cargo.toml  MANIFEST.in  Makefile  grammar.js  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: ci.yml  release.yml
src/: grammar.json  node-types.json  scanner.c
test/corpus/: bare_subprocess.txt  python_literals.txt  python_statements.txt
