[package]
name = "tree-sitter-xonsh"
description = "Xonsh grammar for tree-sitter"
version = "0.1.5"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "xonsh"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/FoamScience/tree-sitter-xonsh"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"
tree-sitter-language = "0.1.6"

[build-dependencies]
cc = "1.0.87"
