[build-system]
requires = ["setuptools>=42", "wheel", "tree-sitter~=0.21"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-xonsh"
description = "Xonsh grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "xonsh"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/FoamScience/tree-sitter-xonsh"

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
